--- a/board/toldotechnik_rpi/rootfs-overlay/var/www/index.html
+++ b/board/toldotechnik_rpi/rootfs-overlay/var/www/index.html
@@ -24,6 +24,10 @@
 			text-align: center;
 		}
 
+		audio {
+			visibility: hidden;
+		}
+
 		.sk-cube-grid {
 			width: 200px;
 			height: 200px;
@@ -141,6 +145,10 @@
 	</div>
 	<div class="title center" id="txtCEC">Press some buttons on your tv remote. (Up, Down, ...)</div>
 	<div class="center">Index page located in /var/www/</div>
+	<div class="center">Music: https://www.bensound.com</div>
+	<audio controls loop autoplay>
+		<source src="vendor/bensound/bensound-buddy.mp3" type="audio/mpeg">
+	</audio>
 </body>
 
 </html>
