--- a/board/toldotechnik_rpi/rootfs-overlay/var/www/index.html
+++ b/board/toldotechnik_rpi/rootfs-overlay/var/www/index.html
@@ -127,6 +127,14 @@
 				console.log("got cec info: " + data);
 				$("#txtCEC").text(data);
 			});
+
+			// audio
+			myAudio = new Audio("vendor/bensound/bensound-buddy.mp3"); 
+			myAudio.addEventListener("ended", function() {
+					this.currentTime = 0;
+					this.play();
+			}, false);
+			myAudio.play();
 		});
 	</script>
 </head>
@@ -146,9 +154,6 @@
 	<div class="title center" id="txtCEC">Press some buttons on your tv remote. (Up, Down, ...)</div>
 	<div class="center">Index page located in /var/www/</div>
 	<div class="center">Music: https://www.bensound.com</div>
-	<audio controls loop autoplay>
-		<source src="vendor/bensound/bensound-buddy.mp3" type="audio/mpeg">
-	</audio>
 </body>
 
 </html>
